<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".ScoreFragment">

    <TextView
        android:id="@+id/txt_score"
        style="@style/TopText"
        android:text="@string/score_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_scoreRes_scores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submitscore" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txt_nicknaam"
        android:maxLength="20"
        android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm,_,-"
        android:hint="Nicknaam"
        android:textColorHint="@color/blackQuizzit"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:text="@string/nicknaam_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_submitscore"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_score" />

    <Button
        android:id="@+id/btn_submitscore"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/blackQuizzit"
        android:text="@string/postscore_button"
        android:textColor="@color/yellowQuizzit"
        app:layout_constraintBottom_toBottomOf="@+id/txt_nicknaam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_score" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <variable
            name="scoreViewModel"
            type="com.example.quizzit.screens.score.ScoreViewModel" />
    </data>
    </layout>