<resources>
    <string name="app_name">Quizzit</string>
    <string name="postscore_button">Submit score</string>
    <string name="play_button">PLAY</string>
    <string name="score_text"></string>
    <string name="selecteren_text"></string>
    <string name="nicknaam_text"></string>
    <string name="loading_text">Quizzes worden geladen ... even geduld aub</string>
</resources>
