<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.HomeFragment">

    <Button
        android:id="@+id/btn_play"
        style="@style/QuizPlayButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
