<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.quizzit.screens.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_quizSelecterenFragment"
            app:destination="@id/quizSelecterenFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.quizzit.screens.quiz.spelen.QuizSpelenFragment"
        android:label="fragment_quizspelen"
        tools:layout="@layout/fragment_quizspelen" >
        <action
            android:id="@+id/action_quizFragment_to_scoreFragment"
            app:destination="@id/scoreFragment"
...
